@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-24T01:55:26Z",
-  "count_outdated" : 45,
-  "uniques_outdated" : 15,
+  "timestamp" : "2022-11-29T08:28:11Z",
+  "count_outdated" : 46,
+  "uniques_outdated" : 16,
   "count" : 47,
   "uniques" : 17,
   "views" : [
-    {
-      "timestamp": "2022-11-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-16T00:00:00Z",
       "count": 1,
