@@ -1,3 +1,11 @@
+2022-11-29T08:28:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3572299753 # 1072
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 15 45 / 17 47
+* notice: next accum: outdated-unq outdated-all / unq all: 16 46 / 17 47
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-15] / []
+
 2022-11-24T01:55:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3537062542 # 1056
 * notice: last 14d: unq all: 2 2
